--- a/pub/pubspec.yaml
+++ b/pub/pubspec.yaml
@@ -3,7 +3,7 @@ name: test
 description: A single command-line application
 
 environment:
-  sdk: ^3.9.2
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   equatable: ^2.0.7
